<resources>
    <string name="app_package_name">com.sayantanbanerjee.transactionmanagementapp</string>
    <string name="app_name">Transact</string>
    <string name="splash_image">splash_image</string>
    <string name="ANONYMOUS">ANONYMOUS</string>
    <string name="activity_transaction">To View The Transactions</string>
    <string name="add_transaction_to_database">Add transaction</string>
    <string name="update_as_accept">Update Accept</string>
    <string name="update_as_reject">Update Reject</string>
    <string name="accepted_sent_sum">ACCEPTED SENT SUM</string>
    <string name="accepted_received_sum">RECEIVED SUM</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="amount_in_the_transaction">AMOUNT IN THE TRANSACTION</string>
    <string name="parity">PARITY</string>
    <string name="status">STATUS</string>
    <string name="add_items">add_items</string>
    <string name="enter_phone_number">RECEIVER PHONE NUMBER</string>
    <string name="enter_amount_involved">AMOUNT INVOLVED (in Rs.)</string>
    <string name="amount_received">Amount Received</string>
    <string name="amount_sent">Amount Sent</string>
    <string name="generate_qr_code">GENERATE QR CODE</string>
    <string name="qr_code_place_holder">QR CODE PLACE HOLDER</string>
    <string name="activity_scanning">TO VERIFY TRANSACTION</string>
    <string name="scan_qr_code_for_verification">Scan QR Code!</string>
    <string name="amount">AMOUNT</string>
    <string name="accept_transaction">Accept Transaction</string>
    <string name="reject_transaction">REJECT TRANSACTION</string>
    <string name="update_items">UpdateItems</string>
    <string name="scanning_successful">Transaction Scanning done?</string>
    <string name="revoke_transaction">Revoke The Transaction</string>
    <string name="add_new_record">ADD NEW RECORD</string>
    <string name="scan_record">VERIFICATION OF RECORDS</string>
    <string name="sender_number">Sender Number</string>
    <string name="transact">TRANSACT</string>
    <string name="activity_adding_transaction">TO ADD TRANSACTION</string>
    <string name="TIMESTAMP">TIMESTAMP</string>
    <string name="search_for_a_contact">Search for a contact</string>
    <string name="exit_confirmation_title">Confirm Exit?</string>
    <string name="exit_confirmation_message">If you exit, the following transaction will be discarded and not be recorded in your device.</string>
    <string name="exit_mssg">EXIT</string>
    <string name="cancel_mssg">CANCEL</string>
    <string name="defaultGroupPerson">DISPLAYING RECORDS OF EVERYONE</string>
</resources>