<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".presenter.TransactionActivityPackage.TransactionActivity">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/paleBlue"
            android:queryHint="@string/search_for_a_contact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/updateFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:contentDescription="@string/update_items"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/acceptedSentSum"
            app:srcCompat="@drawable/ic_baseline_update_24" />

        <TextView
            android:id="@+id/personView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawablePadding="20dp"
            android:padding="8dp"
            android:text="@string/defaultGroupPerson"
            android:textColor="@color/deepBlue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_baseline_supervisor_account_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />

        <TextView
            android:id="@+id/acceptedSentSum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:padding="8dp"
            android:text="@string/accepted_sent_sum"
            android:textColor="@color/deepBlue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_baseline_trending_up_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personView" />

        <TextView
            android:id="@+id/receivedSum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:padding="8dp"
            android:text="@string/accepted_received_sum"
            android:textColor="@color/deepBlue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_baseline_trending_down_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/acceptedSentSum" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/transactionRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/receivedSum" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
